--- a/.env
+++ b/.env
@@ -53,12 +53,10 @@ COMPOSE_IMAGES_NAMESPACE={{PROJECT-IDENTIFIER}}
 DOCKER_FILES_DIR=./o-dock
 
 # Project base directory
-# As a convention place your project in {TLD}/{PROJECT-IDENTIFIER}/ directory on host machine.
-# Mount {TLD} directory of host machine on docker machine root with same name,
-#   i.e. means {TLD} host directory will exists in root of docker machine.
-# For window 8,8.1 it is '/{TLD}/{PROJECT-IDENTIFIER}', it is absolute path w.r.t to docker machine.
-    # Remember, in above path {TLD} directory exists in root of docker machine
-    # {PROJECT-IDENTIFIER} is project folder
+# For window 8,8.1 it is '/.vps/{TLD}/{PROJECT-IDENTIFIER}' (projects folder is shared with docker machine),
+    # In above path .vps directory exists in root of docker machine, this is absolute path
+    # It is encourged as good practice to share .vps as root with docker machine
+    # Sub-directories should should follow {TLD}/{PROJECT-IDENTIFIER} as convention
 # For window 10, it is '.' i.e current directory it is relative path
 APP_BASE_DIR=.
 
@@ -115,14 +113,14 @@ NETWORK_NAME=net1-nginx-proxy
 #
 
 
-# Accepted values: 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
-PHP_VERSION=7.4
+# Accepted values: 8.1, 8.0, 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
+PHP_VERSION=8.0
 
 # Accepted values: hhvm - php-fpm
 PHP_INTERPRETER=php-fpm
 
 # Accepted Values
-NODE_VERSION=10.17.0
+NODE_VERSION=14.16.1
 
 # Docker Host IP
 # Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.75.1`
@@ -143,74 +141,11 @@ PHP_IDE_CONFIG=serverName={{PROJECT-IDENTIFIER}}.{{TLD}}
 #
 
 
-
 #
 # APACHE
 # Configuration Options:
-# Option 1: Use single appache service for multiple host
-#   - Suppose code directory contain multiple sub directories, each belongs to single host, you need to add virtual manually
-#   - File to add/configure virtual hosts is ./o-dock/_conf/apache/sites/apache.conf
-#   - Its is possible to configure single appache service for multiple hosts, however we need separat PHP services for different apps
-#   - So need to configure ProxyPassMatch for each virtual host accordingly
-#   - Example 1:
-#       Below is example virtual host configurations, if app exists with root folder i.e in folder {PROJECT-IDENTIFIER}/code
-#        <VirtualHost *:80>
-#            Options Indexes FollowSymLinks
-#            # Proxy .php requests to port 9000 of the php-fpm container
-#            ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{PROJECT-IDENTIFIER}.{TLD}.php:9000/var/www/$1
-#            ServerName {PROJECT-IDENTIFIER}.{TLD}
-#            DocumentRoot /var/www
-#            <Directory /var/www/>
-#                DirectoryIndex index.html
-#                AllowOverride All
-#                <IfVersion < 2.4>
-#                      Allow from all
-#                </IfVersion>
-#                <IfVersion >= 2.4>
-#                  Require all granted
-#                </IfVersion>
-#            </Directory>
-#            # Send apache logs to stdout and stderr
-#            CustomLog /proc/self/fd/1 common
-#            ErrorLog /proc/self/fd/2
-#        </VirtualHost>
-#
-#   - Example 2:
-#       Below is example virtual host configurations, if app exists in sub-directory within root folder i.e in folder {PROJECT-IDENTIFIER}/code
-#       You can add as many virtual hosts as you like
-#
-#       {UNIQUE-SERVICE-IDENTIFIER}: It is encourged to use sub-directory name
-#       {SUB-DOMAIN}: It is encourged to use sub-directory name
-#
-#        <VirtualHost *:80>
-#            Options Indexes FollowSymLinks
-#            # Proxy .php requests to port 9000 of the php-fpm container
-#            ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{PROJECT-IDENTIFIER}.{TLD}.php.{UNIQUE-SERVICE-IDENTIFIER}:9000/var/www/$1
-#            ServerName {SUB-DOMAIN}.{PROJECT-IDENTIFIER}.{TLD}
-#            DocumentRoot /var/www
-#            <Directory /var/www/>
-#                DirectoryIndex index.html
-#                AllowOverride All
-#                <IfVersion < 2.4>
-#                      Allow from all
-#                </IfVersion>
-#                <IfVersion >= 2.4>
-#                  Require all granted
-#                </IfVersion>
-#            </Directory>
-#            # Send apache logs to stdout and stderr
-#            CustomLog /proc/self/fd/1 common
-#            ErrorLog /proc/self/fd/2
-#        </VirtualHost>
-#
-# Option 2: Use multiple appache services for each host
-#   - That is easy one just need to configure sigle host, see Example 1, above
-#
-# APACHE_VIRTUAL_HOST
-#   - Automatically configures reverse proxy if [opendocks/o-proxy](https://github.com/opendocks/o-proxy) is running
-#   - For multiple virtual hosts, or sub domains provide comma separated lis
-# ----------------------------------------------------------------------------------------------------------------------
-#
+# See instructions on file ./o-dock/_conf/apache/sites/apache.conf to setup virtual hosts for php services
+
 HTTPD_VERSION=2.4.33
 LINUX_DISTRO=alpine
 APACHE_HTTP_PORT=8080
@@ -218,7 +153,7 @@ APACHE_HTTPS_PORT=444
 APACHE_DOCUMENT_ROOT=/var/www/
 APACHE_DOCUMENT_ROOT_FLAG=:cached
 APACHE_CONFIG_PATH=/usr/local/apache2/conf
-APACHE_VIRTUAL_HOST={{PROJECT-IDENTIFIER}}.{{TLD}}
+APACHE_VIRTUAL_HOST={{PROJECT-IDENTIFIER}}.{{TLD}} # e.g. {PROJECT-IDENTIFIER}.{TLD}, {CONTAINER-IDENTIFIER}.{PROJECT-IDENTIFIER}.{TLD}
 
 
 
@@ -323,16 +258,16 @@ PHP_INSTALL_MYSQLI=true
 PHP_INSTALL_MYSQL_CLIENT=false
 PHP_INSTALL_MONGO=false
 PHP_INSTALL_MSSQL=false
-PHP_INSTALL_OPCACHE=true
+PHP_INSTALL_OPCACHE=false
 PHP_INSTALL_PCNTL=false
 PHP_INSTALL_PGSQL=false
 PHP_INSTALL_PG_CLIENT=false
 PHP_INSTALL_PHPDBG=false
-PHP_INSTALL_PHPREDIS=true
+PHP_INSTALL_PHPREDIS=false
 PHP_INSTALL_SOAP=false
-PHP_INSTALL_SSH2=true
+PHP_INSTALL_SSH2=false
 PHP_INSTALL_SWOOLE=false
-PHP_INSTALL_XDEBUG=true
+PHP_INSTALL_XDEBUG=false
 PHP_INSTALL_XSL=false
 PHP_INSTALL_YAML=false
 PHP_INSTALL_ZIP=true
@@ -347,12 +282,12 @@ PHP_INSTALL_ZIP=true
 #       : Only make WS_INSTALL_MCRYPT true for PHP version < 7.2
 # -------------------------------------------------------------------------------
 #
-WS_BASE_TAG=php-7.4
+WS_BASE_TAG=php-8.0
 WS_CHROME_DRIVER_VERSION=2.42
 WS_DOCUMENT_ROOT=/var/www/
 WS_DOCUMENT_ROOT_FLAG=:cached
 WS_DRUSH_VERSION=8.1.17
-WS_NODE_VERSION=10.17.0
+WS_NODE_VERSION=12.16.1
 WS_NPM_REGISTRY=
 WS_PGID=1000
 WS_PUID=1000
@@ -381,7 +316,7 @@ WS_INSTALL_PG_CLIENT=false
 WS_INSTALL_PHPREDIS=false
 WS_INSTALL_POWERLINE=false
 WS_INSTALL_PRESTISSIMO=false
-WS_INSTALL_PYTHON=false
+WS_INSTALL_PYTHON=true
 WS_INSTALL_SUBVERSION=false
 WS_INSTALL_SYMFONY=false
 WS_INSTALL_TERRAFORM=false
@@ -394,7 +329,7 @@ WS_INSTALL_YARN=true
 WS_COMPOSER_AUTH_JSON=false
 WS_COMPOSER_GLOBAL_INSTALL=false
 WS_COMPOSER_REPO_PACKAGIST=
-WS_INSTALL_COMPOSER=false
+WS_INSTALL_COMPOSER=true
 WS_INSTALL_AMQP=false
 WS_INSTALL_GMP=false
 WS_INSTALL_IMAP=false
