Updates readme usage instructions

--- a/.env
+++ b/.env
@@ -50,21 +50,21 @@ COMPOSE_IMAGES_NAMESPACE={{PROJECT-IDENTIFIER}}
 
 # Directory docker files
 # Same for WIN 8, 8.1, 10
-DOCKER_FILES_DIR=./o-dock
+DOCKER_FILES_DIR=./docks
 
 # Project base directory
-# For window 8,8.1 it is '/.vps/{TLD}/{PROJECT-IDENTIFIER}' (projects folder is shared with docker machine),
+# For window 8,8.1 it is '/.vps/{TLD}/{PROJECT-IDENTIFIER}' (projects folder shared with docker machine),
     # In above path .vps directory exists in root of docker machine, this is absolute path
     # It is encourged as good practice to share .vps as root with docker machine
-    # Sub-directories should should follow {TLD}/{PROJECT-IDENTIFIER} as convention
-# For window 10, it is '.' i.e current directory it is relative path
+    # Sub-directories should follow {TLD}/{PROJECT-IDENTIFIER} as convention
+# For window 10, Unix, Linux , it is '.' i.e current directory (relative path)
 APP_BASE_DIR=.
 
 # Choose config path on your machine
-APP_BASE_CONFIG_DIR=o-dock/_conf
+APP_BASE_CONFIG_DIR=docks/conf
 
 # Choose config path on your machine
-APP_BASE_LOG_DIR=o-dock/_logs
+APP_BASE_LOG_DIR=docks/logs
 
 # Point to the path of your applications code on your host
 APP_CODE_DIR=code
