Updates template docs, remove unused files, refactors conf files and log files in template

--- a/.env
+++ b/.env
@@ -61,10 +61,10 @@ DOCKER_FILES_DIR=./docks
 APP_BASE_DIR=.
 
 # Choose config path on your machine
-APP_BASE_CONFIG_DIR=docks/conf
+APP_CONF_DIR=conf
 
 # Choose config path on your machine
-APP_BASE_LOG_DIR=docks/logs
+APP_LOG_DIR=logs
 
 # Point to the path of your applications code on your host
 APP_CODE_DIR=code
@@ -73,17 +73,17 @@ APP_CODE_DIR=code
 APP_DATA_DIR=data
 
 # Sub Config Directories
-APP_APACHE_CONFIG_DIR=apache
-APP_NGINX_CONFIG_DIR=nginx
-APP_PHP_CONFIG_DIR=php
-APP_MYSQL_CONFIG_DIR=mysql
-APP_WS_CONFIG_DIR=workspace
+APACHE_CONFIG_DIR=apache
+NGINX_CONFIG_DIR=nginx
+PHP_CONFIG_DIR=php
+MYSQL_CONFIG_DIR=mysql
+WS_CONFIG_DIR=workspace
 
 # Sub Log Directories
-APP_APACHE_LOG_DIR=apache
-APP_NGINX_LOG_DIR=nginx
-APP_PHP_LOG_DIR=php
-APP_MYSQL_LOG_DIR=mysql
+APACHE_LOG_DIR=${APACHE_CONFIG_DIR}
+NGINX_LOG_DIR=${NGINX_CONFIG_DIR}
+PHP_LOG_DIR=${PHP_CONFIG_DIR}
+MYSQL_LOG_DIR=${MYSQL_CONFIG_DIR}
 
 
 
@@ -282,7 +282,7 @@ PHP_INSTALL_ZIP=true
 #       : Only make WS_INSTALL_MCRYPT true for PHP version < 7.2
 # -------------------------------------------------------------------------------
 #
-WS_BASE_TAG=php-8.1
+WS_BASE_TAG=php-${PHP_VERSION}
 WS_CHROME_DRIVER_VERSION=2.42
 WS_DOCUMENT_ROOT=/var/www/
 WS_DOCUMENT_ROOT_FLAG=:cached
