--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,9 +103,9 @@ services:
       APACHE_CONFIG_PATH: ${APACHE_CONFIG_PATH}
     volumes:
       - ${APP_BASE_DIR}/${APP_CODE_DIR}:${APACHE_DOCUMENT_ROOT}${APACHE_DOCUMENT_ROOT_FLAG}
-      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_APACHE_CONFIG_DIR}/sites/apache.conf:${APACHE_CONFIG_PATH}/apache.conf
-      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_APACHE_CONFIG_DIR}/ssl:/etc/apache/ssl
-      - ${APP_BASE_DIR}/${APP_BASE_LOG_DIR}/${APP_APACHE_LOG_DIR}:/var/log/apache2
+      - ${APP_BASE_DIR}/${APP_CONF_DIR}/${APACHE_CONFIG_DIR}/sites/apache.conf:${APACHE_CONFIG_PATH}/apache.conf
+      - ${APP_BASE_DIR}/${APP_CONF_DIR}/${APACHE_CONFIG_DIR}/ssl:/etc/apache/ssl
+      - ${APP_BASE_DIR}/${APP_LOG_DIR}/${APACHE_LOG_DIR}:/var/log/apache2
     ports:
       - "${APACHE_HTTP_PORT}:80"
 
@@ -125,9 +125,9 @@ services:
       VIRTUAL_HOST: ${NGINX_VIRTUAL_HOST}
     volumes:
       - ${APP_BASE_DIR}/${APP_CODE_DIR}:${NGINX_DOCUMENT_ROOT}${NGINX_DOCUMENT_ROOT_FLAG}
-      - ${APP_BASE_DIR}/${APP_BASE_LOG_DIR}/${APP_NGINX_LOG_DIR}:/var/log/nginx
-      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_NGINX_CONFIG_DIR}/sites:/etc/nginx/sites-available
-      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_NGINX_CONFIG_DIR}/ssl:/etc/nginx/ssl
+      - ${APP_BASE_DIR}/${APP_LOG_DIR}/${APP_NGINX_LOG_DIR}:/var/log/nginx
+      - ${APP_BASE_DIR}/${APP_CONF_DIR}/${NGINX_CONFIG_DIR}/sites:/etc/nginx/sites-available
+      - ${APP_BASE_DIR}/${APP_CONF_DIR}/${NGINX_CONFIG_DIR}/ssl:/etc/nginx/ssl
     ports:
       - "${NGINX_HTTP_PORT}:80"
       - "${NGINX_HTTPS_PORT}:443"
@@ -179,7 +179,7 @@ services:
     restart: always
     volumes:
       - ${APP_BASE_DIR}/${APP_CODE_DIR}:${PHP_DOCUMENT_ROOT}
-      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/php${PHP_VERSION}.ini:/usr/local/etc/php/php.ini
+      - ${APP_BASE_DIR}/${APP_CONF_DIR}/${PHP_CONFIG_DIR}/php${PHP_VERSION}.ini:/usr/local/etc/php/php.ini
     extra_hosts:
       - "dockerhost:${DOCKER_HOST_IP}"
     environment:
@@ -231,7 +231,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - TZ=${MYSQL_TIMEZONE}
     volumes:
-      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_MYSQL_CONFIG_DIR}:/etc/mysql/conf.d
+      - ${APP_BASE_DIR}/${APP_CONF_DIR}/${MYSQL_CONFIG_DIR}:/etc/mysql/conf.d
       - ${APP_BASE_DIR}/${APP_DATA_DIR}:/var/lib/mysql
     ports:
       - "${MYSQL_PORT}:3306"
