Updates comments to add virtual host

--- a/conf/apache/sites/apache.conf
+++ b/conf/apache/sites/apache.conf
@@ -26,7 +26,7 @@ LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
 # - Default is /var/www
 
 # <ServerName>
-# - Use any value host from comma separated list of APACHE_VIRTUAL_HOST
+# - Use any value host from comma separated list of APACHE_VIRTUAL_HOST (from env file)
 # - if no additional host is added, {{PROJECT-IDENTIFIER}}.{{TLD}} will be deafult
 
 # <ProxyPassMatch>
