Update env vars

--- a/.env
+++ b/.env
@@ -80,10 +80,10 @@ MYSQL_CONFIG_DIR=mysql
 WS_CONFIG_DIR=workspace
 
 # Sub Log Directories
-APACHE_LOG_DIR=${APACHE_CONFIG_DIR}
-NGINX_LOG_DIR=${NGINX_CONFIG_DIR}
-PHP_LOG_DIR=${PHP_CONFIG_DIR}
-MYSQL_LOG_DIR=${MYSQL_CONFIG_DIR}
+APACHE_LOG_DIR=apache
+NGINX_LOG_DIR=nginx
+PHP_LOG_DIR=php
+MYSQL_LOG_DIR=mysql
 
 
 
