Update env vars

--- a/.env
+++ b/.env
@@ -282,7 +282,7 @@ PHP_INSTALL_ZIP=true
 #       : Only make WS_INSTALL_MCRYPT true for PHP version < 7.2
 # -------------------------------------------------------------------------------
 #
-WS_BASE_TAG=php-${PHP_VERSION}
+WS_BASE_TAG=php-8.1
 WS_CHROME_DRIVER_VERSION=2.42
 WS_DOCUMENT_ROOT=/var/www/
 WS_DOCUMENT_ROOT_FLAG=:cached
