fixes apache conf error due to comment is code line

--- a/conf/apache/sites/apache.conf
+++ b/conf/apache/sites/apache.conf
@@ -45,8 +45,9 @@ LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
 #   <VirtualHost *:80>
 #        Options Indexes FollowSymLinks
 #        # Proxy .php requests to port 9000 of the php-fpm container
-#        ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{{PROJECT-IDENTIFIER}}.{{TLD}}.php:9000/var/www/$1  # Use for Php
-#        # ProxyPassMatch ^/(.*\.js(/.*)?)$ http://{{PROJECT-IDENTIFIER}}.{{TLD}}.node:9000/var/www/$1   # Use for node
+#        ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{{PROJECT-IDENTIFIER}}.{{TLD}}.php:9000/var/www/$1
+#        # Use for node
+#        # ProxyPassMatch ^/(.*\.js(/.*)?)$ http://{{PROJECT-IDENTIFIER}}.{{TLD}}.node:9000/var/www/$1   
 #        ServerName {{PROJECT-IDENTIFIER}}.{{TLD}}
 #        DocumentRoot /var/www  
 #        <Directory /var/www/>
