Fixes bug restraining use of period (.) in container names, improves readme

--- a/.env
+++ b/.env
@@ -38,7 +38,8 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 # As convention, use {PROJECT-IDENTIFIER}
 COMPOSE_IMAGES_NAMESPACE={{PROJECT-IDENTIFIER}}
 
-
+# Containers name prefix, to separate them with other projects
+CONTAINERS_NAMESPACE={{PROJECT-IDENTIFIER}}_{{TLD}}
 
 #
 # ......................................................................................................................
