some fixes, composer already installed in base image, make false in .env to avaoid re-install

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names.
 # This is useful if you have multiple projects that use {PROJECT-IDENTIFIER}.{TLD} to have seperate containers per project.
-COMPOSE_PROJECT_NAME={{PROJECT-IDENTIFIER}}.{{TLD}}
+COMPOSE_PROJECT_NAME={{PROJECT-IDENTIFIER}}_{{TLD}}
 
 # Windows Path
 # A fix for Windows users, to ensure the application path works
@@ -39,7 +39,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 COMPOSE_IMAGES_NAMESPACE={{PROJECT-IDENTIFIER}}
 
 # Containers name prefix, to separate them with other projects
-CONTAINERS_NAMESPACE={{PROJECT-IDENTIFIER}}_{{TLD}}
+CONTAINERS_NAMESPACE={{PROJECT-IDENTIFIER}}.{{TLD}}
 
 #
 # ......................................................................................................................
@@ -330,7 +330,7 @@ WS_INSTALL_YARN=true
 WS_COMPOSER_AUTH_JSON=false
 WS_COMPOSER_GLOBAL_INSTALL=false
 WS_COMPOSER_REPO_PACKAGIST=
-WS_INSTALL_COMPOSER=true
+WS_INSTALL_COMPOSER=false
 WS_INSTALL_AMQP=false
 WS_INSTALL_GMP=false
 WS_INSTALL_IMAP=false
