--- a/conf/apache/sites/apache.conf
+++ b/conf/apache/sites/apache.conf
@@ -31,8 +31,8 @@ LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
 
 # <ProxyPassMatch>
 # - Replace with appropriate php container name
-# - If only default php service exists, it will {CONTAINERS_NAMESPACE}_php
-# - If added more php service, it will {CONTAINERS_NAMESPACE}_{CONTAINER-IDENTIFIER}
+# - If only default php service exists, it will {CONTAINERS_NAMESPACE}.php
+# - If added more php service, it will {CONTAINERS_NAMESPACE}.{CONTAINER-IDENTIFIER}
 
 # <DirectoryIndex>
 # Set appropraite directory index e.g. index.html or index.php or index.ts etc
@@ -45,9 +45,9 @@ LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
 #   <VirtualHost *:80>
 #        Options Indexes FollowSymLinks
 #        # Proxy .php requests to port 9000 of the php-fpm container
-#        ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{{CONTAINERS_NAMESPACE}}_php:9000/var/www/$1
+#        ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{{CONTAINERS_NAMESPACE}}.php:9000/var/www/$1
 #        # Use for node
-#        # ProxyPassMatch ^/(.*\.js(/.*)?)$ http://{{CONTAINERS_NAMESPACE}}_node:9000/var/www/$1   
+#        # ProxyPassMatch ^/(.*\.js(/.*)?)$ http://{{CONTAINERS_NAMESPACE}}.node:9000/var/www/$1   
 #        ServerName {{PROJECT-IDENTIFIER}}.{{TLD}}
 #        # Add as many alias as you want, it all target to same container  
 #        # ServerAlias api.{{PROJECT-IDENTIFIER}}.{{TLD}}
